05.myapp1/3.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  # backend:
  #   serviceName: nginx-ingress-default-backend
  #   servicePort: 80
  rules:
    # Tên miền truy cập
  - host: demo1.hit.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-test-svc
            port: 
              number: 80
